<resources>
    <string name="app_name">Work-Out</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="placeholder">Placeholder</string>
    <string name="content_desc">This image shows how to perform the exercise</string>
    <string name="description">Description: ...</string>
    <string name="equipment">Equipment: ...</string>
    <string name="muscles">Muscles: ...</string>
    <string name="workout_image_button_content_desc">This button enables users to add a new workout.</string>
    <string name="title_activity_test">test</string>
    <string name="name">Name:</string>
    <string name="workout_title">Workout title</string>
    <string name="use_template">Use template:</string>
    <string name="length">Length:</string>
    <string name="enter_number">Enter number (1-10)</string>
    <string name="action_complete">Complete action</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="mon">Mon</string>
    <string name="edit_planner">Edit planner</string>
    <string name="choose_an_exercise">Choose an exercise</string>
    <string name="template_length">Template length:</string>
    <string name="length_number">1/10</string>
    <string name="delete_action">Delete action</string>
    <string name="edit_action">Edit action</string>
</resources>
