<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="nl.mprog.glimp.work_out.Activities.CreateWorkoutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/createWorkoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/create_new_workout"
        app:titleTextColor="@color/white"/>

    <EditText
        android:id="@+id/workoutTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createWorkoutToolbar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/workout_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/templateTextView"
        android:text="@string/use_template"
        android:layout_below="@id/workoutTitleEditText"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/templateSpinner"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/templateTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/lengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/templateTextView"
        android:layout_alignStart="@id/templateTextView"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/template_length"/>

    <TextView
        android:id="@+id/lengthNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lengthTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/length_number"/>

    <SeekBar
        android:id="@+id/lengthSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/lengthTextView"
        android:layout_marginTop="3dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@id/lengthTextView"
        android:layout_below="@id/templateTextView"
        android:max="9"/>

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_below="@id/lengthSeekBar"/>

    <ListView
        android:id="@+id/createWorkoutListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontalDivider"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp">
    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exerciseActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/ic_add_white_18dp"
        android:onClick="newExercise"/>

</RelativeLayout>
